--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,10 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body, button, input, select, textarea {
-    font-family: 'MinecraftiaRegular'; 
-}
-
-button {
-    font-family: 'MinecraftiaRegular';
+    font-family: "Press Start 2P", serif;
 }
 
 .black {
