--- a/src/css/server.css
+++ b/src/css/server.css
@@ -87,6 +87,7 @@ nav {
 }
   
 .stats-header {
+    font-weight: bold;
     width: calc(500px - 24.8px);
     background-color: #d4d4d4;
     color: rgb(0, 0, 0);
