--- a/src/css/style.css
+++ b/src/css/style.css
@@ -231,9 +231,10 @@ body {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  font-size: 13px;
+  font-size: 15px;
   text-shadow: 2.6px 2.6px #3F3F3F;
-  padding: 1.2px;
+  padding-right: 2px;
+
 }
 
 .tooltip {
